2003-08-17  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp:  JavaScript fixes and
	error handling improvements.

2003-08-16  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Replaced
	specialization of std::char_traits with a class supporting the
	Character Traits concept. (Strictly, the specialization was not
	legal, since standard library templates can only be specialized
	for user-defined data types.)

2003-08-16  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp:  JavaScript fixes and
	error handling improvements.

2003-08-03  Braden McDaniel  <braden@endoframe.com>

	* dox/Doxyfile:  Changed INPUT to point to new source
	directories; use dot for inheritance and collaboration diagrams.

2003-08-03  Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in:  Adjusted include directory.
	* openvrml-gl.pc.in: Adjusted include directory.

2003-07-29  Braden McDaniel  <braden@endoframe.com>

	Naming convention changes. Change "OpenVRML" namespace to
	"openvrml"; changed "OpenVRML::GL" namespace to "openvrml::gl".

2003-07-28  Braden McDaniel  <braden@endoframe.com>

	Doxygen documentation improvements.

	* src/openvrml/OpenVRML/browser.cpp:  Doxygen documentation
	improvements.
	* src/openvrml/OpenVRML/browser.h:  Doxygen documentation
	improvements.
	* src/openvrml/OpenVRML/doc.cpp:  Doxygen documentation
	improvements.
	* src/openvrml/OpenVRML/field.cpp:  Doxygen documentation
	improvements.
	* src/openvrml/OpenVRML/field_value_ptr.cpp:  Doxygen
	documentation improvements.
	* src/openvrml/OpenVRML/frustum.cpp:  Doxygen documentation
	improvements.
	* src/openvrml/OpenVRML/node.cpp:  Doxygen documentation
	improvements.
	* src/openvrml/OpenVRML/node.h:  Doxygen documentation
	improvements.

2003-07-27  Braden McDaniel  <braden@endoframe.com>

	Removed unused functions node::update_modified and
	node::mark_path_modified.
