@@ -1,3 +1,8 @@
+2003-08-18  Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/script.cpp:  Minor JavaScript
+	improvements.
+
 2003-08-17  Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/script.cpp:  JavaScript fixes and
